[chores] Fixed nav padding on narrow screens

--- a/_static/custom.css
+++ b/_static/custom.css
@@ -173,8 +173,10 @@ header.sticky a.items-center > img,
   width: 125px;
 }
 
-#left-sidebar {
-  padding: 1rem 0;
+@media (min-width:768px) {
+  #left-sidebar {
+    padding: 1rem 0;
+  }
 }
 
 #left-sidebar > div.h-\[calc\(100vh-8rem\)\]{
